test/ui/src/compile_fail/std/template_unclosed_hole.rs
fn main() {
    emit::emit!("template {");
}
